--- a/package.json
+++ b/package.json
@@ -24,13 +24,20 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
-		"prettier": "^3.1.1",
+		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@awesome.me/kit-7afeb9cb5d": "^1.0.7",
+		"@tailwindcss/vite": "4.0.0-alpha.16",
+		"bits-ui": "^0.21.11",
+		"tailwindcss": "4.0.0-alpha.16"
+	}
 }
