--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
-		"eslint": "^9.0.0",
+		"eslint": "^9.6.0",
 		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
 		"prettier": "^3.3.2",
@@ -37,6 +38,7 @@
 	"type": "module",
 	"dependencies": {
 		"@awesome.me/kit-7afeb9cb5d": "^1.0.7",
+		"@fontsource-variable/georama": "^5.0.21",
 		"@tailwindcss/vite": "4.0.0-alpha.16",
 		"bits-ui": "^0.21.11",
 		"tailwindcss": "4.0.0-alpha.16"
