--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@fortawesome/sharp-regular-svg-icons": "^6.5.2",
 		"@tailwindcss/vite": "4.0.0-alpha.16",
 		"bits-ui": "^0.21.11",
+		"cva": "npm:class-variance-authority@^0.7.0",
 		"svelte-awesome": "^3.3.1",
 		"tailwindcss": "4.0.0-alpha.16"
 	}
