--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
+		"@portabletext/svelte": "^2.1.11",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-vercel": "^5.4.0",
 		"@sveltejs/kit": "^2.0.0",
@@ -40,9 +41,13 @@
 		"@awesome.me/kit-7afeb9cb5d": "^1.0.14",
 		"@fontsource-variable/georama": "^5.0.21",
 		"@fortawesome/sharp-regular-svg-icons": "^6.5.2",
+		"@sanity/client": "^6.20.1",
+		"@sanity/image-url": "^1.0.2",
+		"@sanity/svelte-loader": "^1.11.33",
 		"@tailwindcss/vite": "4.0.0-alpha.16",
 		"bits-ui": "^0.21.11",
 		"cva": "npm:class-variance-authority@^0.7.0",
+		"groq": "^3.49.0",
 		"svelte-awesome": "^3.3.1",
 		"tailwindcss": "4.0.0-alpha.16"
 	}
