--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"cva": "npm:class-variance-authority@^0.7.0",
 		"groq": "^3.49.0",
 		"svelte-awesome": "^3.3.1",
+		"tailwind-merge": "^2.4.0",
 		"tailwindcss": "4.0.0-alpha.16"
 	}
 }
