feat: skills tab

--- a/.prettierrc
+++ b/.prettierrc
@@ -11,6 +11,6 @@
 	"proseWrap": "always",
 	"useTabs": true,
 	"singleQuote": true,
-	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+	"plugins": ["prettier-plugin-tailwindcss", "prettier-plugin-svelte"],
 	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
