--- a/.prettierrc
+++ b/.prettierrc
@@ -11,6 +11,5 @@
 	"proseWrap": "always",
 	"useTabs": true,
 	"singleQuote": true,
-	"plugins": ["prettier-plugin-tailwindcss", "prettier-plugin-svelte"],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"plugins": ["prettier-plugin-svelte", "prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"]
 }
