--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@commitlint/cli": "^19.4.0",
+		"@commitlint/config-conventional": "^19.2.2",
 		"@playwright/test": "^1.28.1",
 		"@portabletext/svelte": "^2.1.11",
 		"@sveltejs/adapter-auto": "^3.0.0",
