--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
 		"test": "npm run test:integration && npm run test:unit",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"test:integration": "playwright test",
-		"test:unit": "vitest"
+		"prepare": "husky install"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.4.0",
@@ -30,6 +29,7 @@
 		"eslint-plugin-prettier": "^5.1.3",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"husky": "^9.1.5",
 		"prettier": "^3.3.3",
 		"prettier-plugin-organize-imports": "^4.0.0",
 		"prettier-plugin-svelte": "^3.2.6",
