--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"test": "npm run test:integration && npm run test:unit",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"prepare": "husky install"
+		"prepare": "husky"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.4.0",
