--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"test": "npm run test:integration && npm run test:unit",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"prepare": "husky"
+		"prepare": "husky",
+		"init-envs": "cross-env APP_ENV=prod op inject -i env.tpl -o .env"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.4.0",
@@ -24,6 +25,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
+		"cross-env": "^7.0.3",
 		"eslint": "^9.6.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
