--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"cSpell.words": ["monaspace", "Monaspace", "offwhite", "slnt", "wdth", "wght"]
+	"cSpell.words": ["dndzone", "monaspace", "Monaspace", "offwhite", "onconsider", "onfinalize", "slnt", "wdth", "wght"]
 }
