--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.6",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
+		"svelte-dnd-action": "^0.9.51",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
