feat: add resume and vercel analytics/speed tracking

--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
 		"@sanity/image-url": "^1.0.2",
 		"@sanity/svelte-loader": "^1.11.33",
 		"@tailwindcss/vite": "4.0.0-alpha.16",
+		"@vercel/analytics": "^1.3.2",
+		"@vercel/speed-insights": "^1.0.14",
 		"bits-ui": "^0.21.11",
 		"cva": "npm:class-variance-authority@^0.7.0",
 		"groq": "^3.49.0",
