--- a/package.json
+++ b/package.json
@@ -15,51 +15,54 @@
 		"init-envs": "cross-env APP_ENV=prod op inject -i env.tpl -o .env"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^19.4.0",
-		"@commitlint/config-conventional": "^19.2.2",
-		"@playwright/test": "^1.28.1",
-		"@portabletext/svelte": "^2.1.11",
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/adapter-static": "^3.0.2",
-		"@sveltejs/adapter-vercel": "^5.4.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/eslint": "^8.56.7",
+		"@commitlint/cli": "^19.8.1",
+		"@commitlint/config-conventional": "^19.8.1",
+		"@playwright/test": "^1.52.0",
+		"@portabletext/svelte": "^3.0.0",
+		"@sveltejs/adapter-auto": "^6.0.1",
+		"@sveltejs/adapter-static": "^3.0.8",
+		"@sveltejs/adapter-vercel": "^5.7.2",
+		"@sveltejs/kit": "^2.21.2",
+		"@sveltejs/vite-plugin-svelte": "^5.1.0",
+		"@types/eslint": "^9.6.1",
 		"cross-env": "^7.0.3",
-		"eslint": "^9.6.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-prettier": "^5.1.3",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
-		"husky": "^9.1.5",
-		"prettier": "^3.3.3",
-		"prettier-plugin-organize-imports": "^4.0.0",
-		"prettier-plugin-svelte": "^3.2.6",
-		"prettier-plugin-tailwindcss": "^0.6.6",
-		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^3.6.0",
-		"svelte-dnd-action": "^0.9.51",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.3",
-		"vitest": "^1.2.0"
+		"eslint": "^9.28.0",
+		"eslint-config-prettier": "^10.1.5",
+		"eslint-plugin-prettier": "^5.4.1",
+		"eslint-plugin-svelte": "^3.9.1",
+		"globals": "^16.2.0",
+		"husky": "^9.1.7",
+		"prettier": "^3.5.3",
+		"prettier-plugin-organize-imports": "^4.1.0",
+		"prettier-plugin-svelte": "^3.4.0",
+		"prettier-plugin-tailwindcss": "^0.6.12",
+		"svelte": "^5.33.14",
+		"svelte-check": "^4.2.1",
+		"svelte-dnd-action": "^0.9.61",
+		"typescript": "^5.8.3",
+		"vite": "^6.3.5",
+		"vitest": "^3.2.2"
 	},
 	"type": "module",
 	"dependencies": {
-		"@awesome.me/kit-7afeb9cb5d": "^1.0.14",
-		"@fontsource-variable/georama": "^5.0.21",
-		"@fortawesome/sharp-regular-svg-icons": "^6.5.2",
-		"@sanity/client": "^6.20.1",
-		"@sanity/image-url": "^1.0.2",
-		"@sanity/svelte-loader": "^1.11.33",
-		"@tailwindcss/vite": "4.0.0-alpha.16",
-		"@vercel/analytics": "^1.3.2",
-		"@vercel/speed-insights": "^1.0.14",
-		"bits-ui": "^0.21.11",
-		"cva": "npm:class-variance-authority@^0.7.0",
-		"groq": "^3.49.0",
-		"motion": "^10.18.0",
-		"svelte-awesome": "^3.3.1",
-		"tailwind-merge": "^2.4.0",
-		"tailwindcss": "4.0.0-alpha.16"
+		"@awesome.me/kit-7afeb9cb5d": "^1.0.16",
+		"@fontsource-variable/georama": "^5.2.5",
+		"@fontsource-variable/unbounded": "^5.2.5",
+		"@fontsource/germania-one": "^5.2.5",
+		"@fortawesome/sharp-regular-svg-icons": "^6.7.2",
+		"@sanity/client": "^7.4.1",
+		"@sanity/image-url": "^1.1.0",
+		"@sanity/svelte-loader": "^1.13.41",
+		"@sanity/visual-editing": "^2.15.0",
+		"@tailwindcss/vite": "4.1.8",
+		"@vercel/analytics": "^1.5.0",
+		"@vercel/speed-insights": "^1.2.0",
+		"bits-ui": "^2.4.1",
+		"cva": "npm:class-variance-authority@^0.7.1",
+		"groq": "^3.91.0",
+		"motion": "^12.16.0",
+		"svelte-awesome": "^3.3.5",
+		"tailwind-merge": "^3.3.0",
+		"tailwindcss": "4.1.8"
 	}
 }
