--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"@sanity/image-url": "^1.1.0",
 		"@sanity/svelte-loader": "^1.13.41",
 		"@sanity/visual-editing": "^2.15.0",
+		"@splidejs/svelte-splide": "^0.2.9",
 		"@tailwindcss/vite": "4.1.8",
 		"@vercel/analytics": "^1.5.0",
 		"@vercel/speed-insights": "^1.2.0",
