--- a/package.json
+++ b/package.json
@@ -17,54 +17,54 @@
 	"devDependencies": {
 		"@commitlint/cli": "^19.8.1",
 		"@commitlint/config-conventional": "^19.8.1",
-		"@playwright/test": "^1.52.0",
+		"@playwright/test": "^1.53.2",
 		"@portabletext/svelte": "^3.0.0",
 		"@sveltejs/adapter-auto": "^6.0.1",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/adapter-vercel": "^5.7.2",
-		"@sveltejs/kit": "^2.21.2",
+		"@sveltejs/kit": "^2.22.2",
 		"@sveltejs/vite-plugin-svelte": "^5.1.0",
 		"@types/eslint": "^9.6.1",
 		"cross-env": "^7.0.3",
-		"eslint": "^9.28.0",
+		"eslint": "^9.30.0",
 		"eslint-config-prettier": "^10.1.5",
-		"eslint-plugin-prettier": "^5.4.1",
-		"eslint-plugin-svelte": "^3.9.1",
+		"eslint-plugin-prettier": "^5.5.1",
+		"eslint-plugin-svelte": "^3.10.1",
 		"globals": "^16.2.0",
 		"husky": "^9.1.7",
-		"prettier": "^3.5.3",
+		"prettier": "^3.6.2",
 		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.6.12",
-		"svelte": "^5.33.14",
-		"svelte-check": "^4.2.1",
-		"svelte-dnd-action": "^0.9.61",
+		"prettier-plugin-tailwindcss": "^0.6.13",
+		"svelte": "^5.34.9",
+		"svelte-check": "^4.2.2",
+		"svelte-dnd-action": "^0.9.63",
 		"typescript": "^5.8.3",
-		"vite": "^6.3.5",
-		"vitest": "^3.2.2"
+		"vite": "^7.0.0",
+		"vitest": "^3.2.4"
 	},
 	"type": "module",
 	"dependencies": {
 		"@awesome.me/kit-7afeb9cb5d": "^1.0.16",
-		"@fontsource-variable/georama": "^5.2.5",
-		"@fontsource-variable/unbounded": "^5.2.5",
-		"@fontsource/germania-one": "^5.2.5",
+		"@fontsource-variable/georama": "^5.2.6",
+		"@fontsource-variable/unbounded": "^5.2.6",
+		"@fontsource/germania-one": "^5.2.6",
 		"@fortawesome/sharp-regular-svg-icons": "^6.7.2",
-		"@sanity/client": "^7.4.1",
+		"@sanity/client": "^7.6.0",
 		"@sanity/image-url": "^1.1.0",
 		"@sanity/svelte-loader": "^1.13.41",
 		"@sanity/visual-editing": "^2.15.0",
 		"@splidejs/svelte-splide": "^0.2.9",
-		"@tailwindcss/vite": "4.1.8",
+		"@tailwindcss/vite": "4.1.11",
 		"@vercel/analytics": "^1.5.0",
 		"@vercel/speed-insights": "^1.2.0",
-		"bits-ui": "^2.4.1",
+		"bits-ui": "^2.8.10",
 		"cva": "npm:class-variance-authority@^0.7.1",
-		"groq": "^3.91.0",
-		"motion": "^12.16.0",
+		"groq": "^3.95.0",
+		"motion": "^12.20.1",
 		"svelte-awesome": "^3.3.5",
-		"tailwind-merge": "^3.3.0",
-		"tailwindcss": "4.1.8"
+		"tailwind-merge": "^3.3.1",
+		"tailwindcss": "4.1.11"
 	},
-	"packageManager": "pnpm@10.12.1+sha256.889bac470ec93ccc3764488a19d6ba8f9c648ad5e50a9a6e4be3768a5de387a3"
+	"packageManager": "pnpm@10.12.4"
 }
