--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"prepare": "husky",
-		"init-envs": "cross-env APP_ENV=prod op inject -i env.tpl -o .env"
+		"init-envs": "cross-env APP_ENV=prod op inject -i .env.tpl -o .env"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.8.1",
@@ -66,5 +66,5 @@
 		"tailwind-merge": "^3.3.0",
 		"tailwindcss": "4.1.8"
 	},
-	"packageManager": "pnpm@10.12.1+sha256.889bac470ec93ccc3764488a19d6ba8f9c648ad5e50a9a6e4be3768a5de387a3"
+	"packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
 }
